tests/fail/Long.java
package fail;

import java.lang.System;

public class Long {

  public static void main(String[] args ) {
    long aLongVariable = "This is not a long";
  }

}
